rebase main on fixed some layout issues
g

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -111,12 +111,22 @@
   @apply px-6 h-auto min-h-0 leading-6 py-2 normal-case;
 }
 
+.btn[disabled]:hover,
+.btn[disabled]:active {
+  pointer-events: none;
+  --tw-border-opacity: 0;
+  background-color: hsl(var(--n) / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.2;
+  color: hsl(var(--bc) / var(--tw-text-opacity));
+  --tw-text-opacity: 0.2;
+}
+
 .badge {
   @apply mr-2 mb-2 px-3 py-1 mt-2 h-auto rounded-lg border-2 text-sm font-semibold whitespace-nowrap;
 }
 
 .btn-link {
-  @apply bg-white text-primary;
+  @apply bg-white text-primary px-0;
 }
 
 .btn-outline-primary {
